--- a/index.html
+++ b/index.html
@@ -25,37 +25,8 @@
     <i class="fa fa-spin fa-spinner"></i>
   </div>
 
-  <section id="jeopardy">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Category1</th>
-          <th>Category2</th>
-          <th>Category3</th>
-          <th>Category4</th>
-          <th>Category5</th>
-          <th>Category6</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>question1</td>
-          <td>question2</td>
-          <td>question3</td>
-          <td>question4</td>
-          <td>question5</td>
-          <td>question6</td>
-        </tr>
-        <tr>
-          <td>question1</td>
-          <td>question2</td>
-          <td>question3</td>
-          <td>question4</td>
-          <td>question5</td>
-          <td>question6</td>
-        </tr>
-      </tbody>
-    </table>
+  <section id="jeopardy" class="container text-center mt-2">
+
       <!-- <h3 class="display-6">Category</h3>
       <h4 class="text-white mt-4" id="question">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</h4>
       <h4 id="answer">Lorem ipsum is placeholder text commonly</h4> -->
