fillTable and handleClick updated

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
   <header>
     <h1 class="mt-4 display-3" id="heading">JEOPARDY!</h1>
     <button id="start" class="btn btn-warning btn-sm mt-2">Start!</button>
-    <button id="restart" class="btn btn-warning btn-sm mt-2">Restart Game!</button>
   </header>
 
   <div id="spin-container">
-    <i class="fa fa-spin fa-spinner"></i>
+    <i class="fa fa-spin fa-spinner" id="loading"></i>
   </div>
 
   <section id="jeopardy" class="container text-center mt-2">
